# matplotlib-extension-cookiecutter

./: README.md  TODO  cookiecutter.json
.github/workflows/: lint.yml
LICENSES/: LICENSE  napari-LICENSE  pyrepo-LICENSE  widget-ts-cookiecutter-LICENSE
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.github_project_name}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
{{cookiecutter.github_project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
{{cookiecutter.github_project_name}}/.github/workflows/: lint.yml  publish.yml  test.yml
{{cookiecutter.github_project_name}}/docs/: API.rst  Contributing.rst  Makefile  conf.py  index.rst
{{cookiecutter.github_project_name}}/examples/: README.rst  example.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/: __init__.py  example.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/tests/: test_example.py
