[metadata]
name={{ cookiecutter.python_package_name }}
author={{ cookiecutter.author_name }}
author_email={{ cookiecutter.author_email }}
url = https://github.com/{{ cookiecutter.github_organization_name }}/{{ cookiecutter.github_project_name }}
license=BSD 3-Clause
packages = find:

[options]
install_requires =
    matplotlib
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Matplotlib

[options.extras_require]
test =
    black
    pytest
    pytest-mpl
doc =
    sphinx
    numpydoc
    sphinx_rtd_theme
    sphinx-copybutton
    sphinx-autobuild
    sphinx_gallery>=0.8.2
dev =
    %(test)s
    %(doc)s
